--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,8 @@
         <dependency.alfresco-server-root.version>6.0.1</dependency.alfresco-server-root.version>
         <dependency.alfresco-messaging-repo.version>1.2.15</dependency.alfresco-messaging-repo.version>
         <dependency.alfresco-log-sanitizer.version>0.2</dependency.alfresco-log-sanitizer.version>
-        <dependency.activiti-engine.version>7.1.0.M6</dependency.activiti-engine.version>
-        <dependency.activiti.version>7.1.0.M6</dependency.activiti.version>
+        <dependency.activiti-engine.version>7.1.0-M16</dependency.activiti-engine.version>
+        <dependency.activiti.version>7.1.0-M16</dependency.activiti.version>
         <dependency.alfresco-transform-model.version>1.4.3</dependency.alfresco-transform-model.version>
         <dependency.alfresco-greenmail.version>6.2</dependency.alfresco-greenmail.version>
         <dependency.acs-event-model.version>0.0.13</dependency.acs-event-model.version>
