--- a/repository/src/main/resources/alfresco/repository.properties
+++ b/repository/src/main/resources/alfresco/repository.properties
@@ -3,7 +3,7 @@
 repository.name=Main Repository
 
 # Schema number
-version.schema=17000
+version.schema=16100
 
 # Directory configuration
 
@@ -53,7 +53,6 @@ system.webdav.servlet.enabled=true
 system.webdav.url.path.prefix=
 system.webdav.storeName=${protocols.storeName}
 system.webdav.rootPath=${protocols.rootPath}
-system.webdav.allowInsecurePOSTMethod=false
 # File name patterns that trigger rename shuffle detection
 # pattern is used by move - tested against full path after it has been lower cased.
 system.webdav.renameShufflePattern=(.*/\\..*)|(.*[a-f0-9]{8}+$)|(.*\\.tmp$)|(.*atmp[0-9]+$)|(.*\\.wbk$)|(.*\\.bak$)|(.*\\~$)|(.*backup.*\\.do[ct]{1}[x]?[m]?$)|(.*\\.sb\\-\\w{8}\\-\\w{6}$)
@@ -1247,12 +1246,6 @@ system.delete_not_exists.read_only=false
 system.delete_not_exists.timeout_seconds=-1
 system.prop_table_cleaner.algorithm=V2
 
-#Aditional options for algorithm V3
-#After how many rows processed do we pause the job to allow the DB to recover
-system.delete_not_exists.pauseAndRecoverBatchSize=500000
-#Duration of the pause in milliseconds (default 10s)
-system.delete_not_exists.pauseAndRecoverTime=10000
-
 # --Node cleanup batch - default settings
 system.node_cleanup.delete_batchSize=1000
 system.node_table_cleaner.algorithm=V1
@@ -1344,10 +1337,8 @@ allow.unsecure.callback.jsonp=false
 # pre-configured allow list of media/mime types to allow inline instead of attachment (via Content-Disposition response header)
 content.nonAttach.mimetypes=application/pdf,image/jpeg,image/gif,image/png,image/tiff,image/bmp
 
-# Zip file compression ratio threshold as a percentage, above which the zip file will be considered a "zip bomb" and the
-# import extraction process cancelled.
-import.zip.compressionRatioThreshold=100
-# Maximum number of uncompressed bytes allowed for an imported zip file above which the zip file will be considered a
-# "zip bomb" and the import extraction process cancelled. No value (or a negative long) will be taken to mean that no
-# limit should be applied.
-import.zip.uncompressedBytesLimit=
+scripts.execution.optimizationLevel=-1
+scripts.execution.maxScriptExecutionSeconds=10
+scripts.execution.maxStackDepth=-1
+scripts.execution.maxMemoryUsed=-1
+scripts.execution.observerInstructionCount=1000
